# OpenRouterLocal

./: .env.example  Cargo.toml  README.md
config/: router.yaml
openrouter-local/: Cargo.toml  README.md
openrouter-local/src/: main.rs
openrouter-local/src/logging/: schema.sql
openrouter-local/src/providers/: cli.rs
openrouter-local/src/token/: naive.rs
openrouter-local/src/types/: mod.rs  openai.rs
src/: cli.rs  config.rs  main.rs  process_manager.rs
src/api/: chat.rs  models.rs
src/dashboard/: handlers.rs  mod.rs  pages.rs
src/logging/: db.rs
src/providers/: cli.rs  gemini_http.rs  mod.rs  openai_http.rs
src/router/: model_router.rs
src/token/: mod.rs
src/types/: normalized.rs  openai.rs
