[package]
name = "openrouter-local"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "2.0"
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.10", features = ["v4", "fast-rng"] }
chrono = { version = "0.4", features = ["clock"] }
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["signal"] }
